--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -10,6 +10,7 @@ RUN apt-get update && apt-get install -y \
     cmake \
     build-essential \
     ncurses-term \
+    vim \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
@@ -17,5 +18,8 @@ RUN apt-get update && apt-get install -y \
 RUN git clone -b v${ISAACLAB_VERSION} https://github.com/isaac-sim/IsaacLab.git /isaac-lab
 RUN ln -s /isaac-sim /isaac-lab/_isaac_sim
 RUN /isaac-lab/isaaclab.sh --install
+
+# Set environment variables
+ENV PATH="/isaac-sim/kit/python/bin:$PATH"
 
 CMD ["/bin/bash"]
